RESOLVED FIXED268877
[WGSL] shader,validation,decl,var_access_mode:* is failing
https://bugs.webkit.org/show_bug.cgi?id=268877
Summary [WGSL] shader,validation,decl,var_access_mode:* is failing
Tadeu Zagallo
Reported 2024-02-06 17:10:20 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-06 17:10:36 PST
Tadeu Zagallo
Comment 2 2024-02-06 17:12:05 PST
EWS
Comment 3 2024-02-07 08:30:14 PST
Committed 274216@main (a00fd580f6e1): <https://commits.webkit.org/274216@main> Reviewed commits have been landed. Closing PR #23970 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.