[WGSL] shader,validation,decl,var_access_mode:* is failing https://bugs.webkit.org/show_bug.cgi?id=268877 rdar://122436006

Reviewed by Mike Wyrzykowski.

Validate against using write-only with the storage address space to pass the CTS tests

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visitVariable):

Canonical link: https://commits.webkit.org/274216@main